--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,2 +1,5 @@
-idf_component_register(SRCS "voicehome.c"
-                    INCLUDE_DIRS ".")
+set(app_src sensor.c)
+set(pre_req log driver)        # log or driver is component of SDK
+idf_component_register(SRCS ${app_src}
+                    INCLUDE_DIRS "."
+                    REQUIRES ${pre_req})
